--- a/pages/javascripts/pages/home/home.html
+++ b/pages/javascripts/pages/home/home.html
@@ -22,6 +22,13 @@
 			</ol>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-xs-12">
+			<h2 style="margin-bottom: 0">Usage</h2>
+			<p>The angular module name is <strong>angularjs-dropdown-multiselect</strong></p>
+			<p>The directive name is <strong>ng-dropdown-multiselect</strong> and can be used as an element or an atribute</p>
+		</div>
+	</div>
 	<accordion close-others="true">
 		<accordion-group heading="Basic Usage Example" is-open="true">
 			<div class="row">
@@ -29,7 +36,7 @@
 					<h3>Demo</h3>
 					<div class="well">
 						<div>
-							<div ng-dropdown-multiselect="" options="example1data" selected-model="example1model"></div>
+							<div ng-dropdown-multiselect options="example1data" selected-model="example1model"></div>
 						</div>
 					</div>
 				</div>
@@ -43,9 +50,13 @@
 					<h3>Code</h3>
 							<div hljs>
 // HTML
-<div ng-dropdown-multiselect="" options="example1data" selected-model="example1model"></div>
+<div ng-dropdown-multiselect options="example1data" selected-model="example1model"></div>
 
-// JavaScript $scope.example1model = []; $scope.example1data = [ {id: 1, label: "David"}, {id: 2, label: "Jhon"}, {id: 3, label: "Danny"}];
+// JavaScript
+// controller: 
+$scope.example1model = []; $scope.example1data = [ {id: 1, label: "David"}, {id: 2, label: "Jhon"}, {id: 3, label: "Danny"}];
+// app.js
+var app = angular.module('exampleApp', ['angularjs-dropdown-multiselect']);
 							</div>
 				</div>
 			</div>
