--- a/pages/javascripts/pages/home/home.html
+++ b/pages/javascripts/pages/home/home.html
@@ -891,7 +891,7 @@ $scope.example18settings = {
 				<td>Indicates if the list items should get a class active applied when they are selected.</td>
 			</tr>
 			<tr>
-				<td>keyboardControl</td>
+				<td>keyboardControls</td>
 				<td>Boolean</td>
 				<td>false</td>
 				<td>When activated the dropdown can be used with the keyboard instead of with the mouse.</td>
